[gd_scene load_steps=9 format=2]

[ext_resource path="res://Img/Crane2-moving-2.png" type="Texture" id=1]
[ext_resource path="res://Img/Crane2-flip-2.png" type="Texture" id=2]
[ext_resource path="res://Img/Crane2-flip-1.png" type="Texture" id=3]
[ext_resource path="res://Crane2.gd" type="Script" id=4]
[ext_resource path="res://Img/Crane2-flipped.png" type="Texture" id=5]
[ext_resource path="res://Img/Crane2-moving-1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "flip",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "flipped",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 216.0

[node name="CraneLeft" type="Area2D"]
script = ExtResource( 4 )

[node name="CraneLeftAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 0.870293, 0.870293 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_CraneLeft_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_CraneLeft_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_CraneLeft_body_entered"]
